EPBDS-14661 Use non deprecated KafkaContainer